--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Book Listing App</string>
+    <string name="no_internet_connection_text">No internet connection.</string>
+    <string name="empty_list_text">No books found.</string>
 </resources>
