--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Book Listing App</string>
     <string name="no_internet_connection_text">No internet connection.</string>
     <string name="empty_list_text">No books found.</string>
+    <string name="query_hint">Search Books</string>
 </resources>
